--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
                 <div class="main-container-tab" id="tab7-main-container">
                    <!-- El recuadro de "Avisos Importantes" ha sido eliminado de aquí -->
 
-                    <!-- Recuadro de documento 1 -->
+                    <!-- Recuadro de PROCESOS DE MIGRACIÓN -->
                     <div class="document-viewer-box draggable-box" id="documentViewer1">
                         <h3 class="drag-handle">
                             <span>DOCUMENTO ADICIONAL 1</span>
