--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@
                                     onerror="this.style.display='none'; this.parentNode.innerHTML += '<div class=\'iframe-error-message\'>No se pudo cargar el documento. Verifique los permisos o el enlace.</div>'"></iframe>
                         </div>
                         <div style="text-align: center; margin-top: 10px;">
-                            <button class="button" onclick="loadDocumentInIframe('docIframe1', 'https://docs.google.com/document/d/e/2PACX-1vQFB8P2uXmgPZ-5j9oz_AVKAIJrm19U1yYzy6X0H7hLXULAzYFga-91a4n3bZ6CKckEUHbFinufXjq2/pub?embedded=true')">Cargar Documento 1 (WF)</button>
+                            <button class="button" onclick="loadDocumentInIframe('docIframe1', 'https://docs.google.com/document/d/e/2PACX-1vQFB8P2uXmgPZ-5j9oz_AVKAIJrm19U1yYzy6X0H7hLXULAzYFga-91a4n3bZ6CKckEUHbFinufXjq2/pub?embedded=true')">Cargar PROCESOS DE MIGRACIÓN (WF)</button>
                         </div>
                     </div>
 
