--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
                     <!-- Recuadro de PROCESOS DE MIGRACIÓN -->
                     <div class="document-viewer-box draggable-box" id="documentViewer1">
                         <h3 class="drag-handle">
-                            <span>DOCUMENTO ADICIONAL 1</span>
+                            <span>PROCESOS DE MIGRACIÓN</span>
                             <button type="button" class="edit-title-btn" onclick="editBoxTitle(this.closest('.drag-handle').querySelector('span'))">✏️</button>
                         </h3>
                         <div class="document-iframe-container">
