--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@
                     <!-- Recuadro de documento 2 -->
                     <div class="document-viewer-box draggable-box" id="documentViewer2">
                         <h3 class="drag-handle">
-                            <span>DOCUMENTO ADICIONAL 2</span>
+                            <span>SEGUIMIENTO DE CASOS</span>
                             <button type="button" class="edit-title-btn" onclick="editBoxTitle(this.closest('.drag-handle').querySelector('span'))">✏️</button>
                         </h3>
                         <div class="document-iframe-container">
