--- a/index.html
+++ b/index.html
@@ -3050,6 +3050,7 @@
             { service: "LLAMADAS DESDE TIGO", value: "25028850" },
             { service: "WHATSAPP", value: "42147100" },
             { service: "migración gpon", value: "gt_quejas_migracion_gpon" }
+            { service: "Backoffice Residencial", value: "GT_BO_Residencial" }
         ];
         function renderTransferItems() {
             dynamicTransfersList.innerHTML = ''; 
