--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@
 
                     <div class="document-viewer-box draggable-box" id="documentViewer2">
                         <h3 class="drag-handle">
-                            <span>SEGUIMIENTO DE CASOS</span>
+                            <span>SEGUIMIENTO DE ORDENES!</span>
                             <button type="button" class="edit-title-btn" onclick="editBoxTitle(this.closest('.drag-handle').querySelector('span'))">✏️</button>
                         </h3>
                         <div class="document-iframe-container">
